ipynb bar_model - Knl and Inl as functions

--- a/bar_model.ipynb
+++ b/bar_model.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -639,37 +639,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "n = [i for i in range(4)]\n",
-    "l = [j for j in range(4)]\n",
-    "m = [k for k in range(4)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[  1.   6.  15.  28.]\n",
-      " [  3.  10.  21.  36.]\n",
-      " [  6.  15.  28.  45.]\n",
-      " [ 10.  21.  36.  55.]]\n",
-      "[[  2.65258238e-02   6.82092613e-03   8.61228047e-04   8.65644601e-05]\n",
-      " [  1.43239449e-01   6.18935890e-02   1.12224639e-02   1.47305069e-03]\n",
-      " [  4.09255568e-01   3.03841255e-01   7.78090833e-02   1.31799272e-02]\n",
-      " [  8.84194128e-01   1.07980508e+00   3.82506838e-01   8.25895614e-02]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'m must be smaller or equal to l'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -678,53 +662,112 @@
     "from scipy.special import gamma\n",
     "from math import pi\n",
     "from math import factorial\n",
+    "from __future__ import division\n",
     "\n",
-    "Knl, Inl = np.zeros((len(n),len(l))), np.zeros((len(n), len(l)))\n",
+    "def diracdelta(m):\n",
+    "    if m == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0\n",
     "\n",
+    "def Knl(n,l):\n",
+    "    return(0.5*n*(n + 4*l + 3) + (l + 1)*(2*l + 1))\n",
     "\n",
-    "for i in range(len(n)):\n",
-    "    for j in range(len(l)):\n",
-    "        Knl[i,j] = 0.5*n[i]*(n[i] + 4*l[j] + 3) + (l[j] + 1)*(2*l[j] + 1)\n",
-    "        Inl[i,j] = Knl[i,j]*1/(2**(8*l[j] + 6))*gamma(n[i] + 4*l[j] + 3)/(factorial(n[i])*(n[i] + 2*l[j] + 3/2)*(gamma(2*l[j] + 3/2))**2 )\n",
-    "print(Knl)\n",
-    "print(Inl)"
+    "def Inl(n,l,m):\n",
+    "    if m<=l:\n",
+    "        return(Knl(n,l)*1/(2**(8*l + 6))*gamma(n + 4*l + 3)/(factorial(n)*(n + 2*l + 3/2) *\\\n",
+    "             (gamma(2*l + 3/2))**2 )*(1 + diracdelta(m))*pi*2/(2*l + 1)*(factorial(l + m)/factorial(l - m)))\n",
+    "    else:\n",
+    "        return('m must be smaller or equal to l') # just a temporary solution for bad input\n",
+    "\n",
+    "Inl(1,2,3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(poly1d([ 1.        ,  0.        , -0.15789474,  0.        ]),\n",
+       " scipy.special.orthogonal.orthopoly1d)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#ksi, RRr\n",
+    "from scipy.special import gegenbauer\n",
+    "\n",
+    "r = 2. #!!!; kpc\n",
+    "rs = 1. #kpc\n",
+    "s = r/rs\n",
+    "RRr = np.zeros((4,4))\n",
+    "\n",
+    "ksi = (r - 1)/(r + 1)\n",
+    "\n",
+    "for n in range(4):\n",
+    "    for l in range(4):\n",
+    "        RRr[n,l] = s**l/((1 + s)**(2*l + 1))*r**2#*gegenbauer(n, 2*l + 3/2, ksi)\n",
+    "        \n",
+    "p = gegenbauer(n, 2*l + 3/2, ksi)\n",
+    "p, type(p)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#Phi\n",
+    "\n",
+    "from math import cos\n",
+    "from scipy.special import lpmn\n",
+    "\n",
+    "phi = 1 #rad\n",
+    "theta = 1 #rad\n",
+    "\n",
+    "Phi = np.zeros((4, 4, 4))\n",
+    "\n",
+    "for n in range(4):\n",
+    "    for l in range(4):\n",
+    "        for m in range(l+1):\n",
+    "            Phi[n][l][m] = s**l/((1 + s)**(2*l + 1))#*gegenbauer(n, 2*l + 3/2, (s - 1)/(s + 1))*cos(m*phi)#*lpmn(m, l, cos(theta))\n",
+    "            #print(lpmn(m, l, cos(theta)))\n",
+    "            #print(gegenbauer(n, 2*l + 3/2, (s - 1)/(s + 1)))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#A"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import scipy.integrate as integrate # http://docs.scipy.org/doc/scipy/reference/tutorial/integrate.html"
+   ]
   }
  ],
  "metadata": {
