Anlm list added

--- a/bar_model.ipynb
+++ b/bar_model.ipynb
@@ -117,27 +117,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 106,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": [
-    "import scipy.integrate as integrate # http://docs.scipy.org/doc/scipy/reference/tutorial/integrate.html"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.033000000000000002"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Anlm\n",
-    "\n",
+    "'''\n",
+    "import scipy.integrate as integrate # http://docs.scipy.org/doc/scipy/reference/tutorial/integrate.html\n",
     "def Anlm(n,l,m,r,theta,phi):\n",
-    "    return(None)"
+    "    return(None)\n",
+    "'''\n",
+    "Anlm = np.array([\n",
+    "        [ 0,  0,  0,  1.509],\n",
+    "        [ 1,  0,  0, -0.086],\n",
+    "        [ 2,  0,  0, -0.033],\n",
+    "        [ 3,  0,  0, -0.020],\n",
+    "        [ 0,  2,  0, -2.606],\n",
+    "        [ 1,  2,  0, -0.221],\n",
+    "        [ 2,  2,  0, -0.001],\n",
+    "        [ 0,  2,  2,  0.665],\n",
+    "        [ 1,  2,  2,  0.129],\n",
+    "        [ 2,  2,  2,  0.006],\n",
+    "        [ 0,  4,  0,  6.406],\n",
+    "        [ 1,  4,  0,  1.295],\n",
+    "        [ 0,  4,  2, -0.660],\n",
+    "        [ 1,  4,  2, -0.140],\n",
+    "        [ 0,  4,  4,  0.044],\n",
+    "        [ 1,  4,  4, -0.012],\n",
+    "        [ 0,  6,  0, -5.859],\n",
+    "        [ 0,  6,  2,  0.984],\n",
+    "        [ 0,  6,  4, -0.030],\n",
+    "        [ 0,  6,  6,  0.001],])"
    ]
   },
   {
@@ -151,6 +174,9 @@
     "#Phi\n",
     "\n",
     "def Phi(r,phi,z):\n",
+    "    # the constant (GM_{bar}/r_s) is set to one... but is that correct...? Now I don't think so...\n",
+    "    for i in range(len(Anlm)):\n",
+    "        Phi += Anlm[i,3]*Phinlm.................................\n",
     "    return(None)"
    ]
   }
