minor change in the text

--- a/doc_tex/document.tex
+++ b/doc_tex/document.tex
@@ -139,7 +139,8 @@
 		% INTEGRATION FOR SECOND DERIVATIVE	
 		\subsection{Integration for Second Derivative}
 			Purpose: Integral that gives the 2nd derivative of the potential in x,y,z \\
-			Derivative is generally $ \pdv{\Phi}{x_i}{x_j} $; for $ i==j $ the integral to be evaluated is: 
+			
+			\noindent The derivative is generally $ \pdv{\Phi}{x_i}{x_j} $; for $ i==j $ the integral to be evaluated is: 
 			
 		\begin{equation}
 		\int_{0}^{\infty} 
