Some typos in equations corrected

--- a/doc_tex/document.tex
+++ b/doc_tex/document.tex
@@ -165,7 +165,7 @@
 		\subsection{Part of Integrand Used in All Functions}
 			Purpose: Returns part of an integrand which is used in other functions so the code was more concise. \\
 		\begin{equation}
-		A^{\nu}(\tau) = \frac{\left(1- \sum_{i=1}^{3} \frac{x_i^2}{\tau + a_i^2}\right)^{\nu}}{[(\tau + a^2)](\tau + a^2b^2)(\tau + a^2c^c)]^\frac{1}{2}}
+		A^{\nu}(\tau) = \frac{\left(1- \sum_{i=1}^{3} \frac{x_i^2}{\tau + a_i^2}\right)^{\nu}}{[(\tau + a^2)(\tau + a^2b^2)(\tau + a^2c^2)]^\frac{1}{2}}
 		\end{equation}
 			\lstinputlisting[language=Python, firstline=530, lastline=531]{FerrersPotential.py}
 	
