--- a/doc_tex/document.tex
+++ b/doc_tex/document.tex
@@ -1,5 +1,6 @@
 \documentclass[a4paper,11pt]{article}
 \usepackage[utf8]{inputenc}
+\usepackage{aas_macros}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
@@ -52,123 +53,107 @@
            $ n $ -- Power of Ferrers density ($ n > 0 $), not necessarilly integer, calculations generally fail for $ n > 4 $\\
            $ b $ -- y-to-x axis ratio of the density, usually $ b < a $\\
            $ c $ -- z-to-x axis ratio of the density, usually $ c < b $\\
-           $ \Omega_b $ -- pattern speed of the bar, $ \vec{\Omega}_b = \hat{e}_z\,\Omega_b $ - not included in the code yet!\\
-           $ \mathrm{zvec} $ -- If set, a unit vector that corresponds to the z axis\\
-           $ \mathrm{pa} $ -- If set, the position angle of the x axis (rad or Quantity)\\
-           $ \mathrm{glorder} $ -- If set, compute the relevant force and potential integrals with Gaussian quadrature of this order\\
+           $ \Omega_b $ -- pattern speed of the bar, $ \vec{\Omega}_b = \hat{e}_z\,\Omega_b $\\
+           $ \mathrm{pa} $ -- If set, the initial position angle of the bar in the xy plane measured from x (rad or Quantity)\\
            normalize -- if True, normalize such that $ v_c(1.,0.)=1. $, or, if given as a number, such that the force is this fraction of the force necessary to make $ v_c(1.,0.)=1. $.\\
            $ r_0 $, $ v_0 $ -- Distance and velocity scales for translation into internal units (default from configuration file)\\
            Variables $ \alpha $	appearing in the code in form $ \_\alpha2 $ carry the value of $ \alpha^2 $ initialized in the begining of the class \_\_init\_\_ function.
 
 	\section{Functions}
-	(... those I have written so far, all for time-independent potential in a frame of reference which is aligned with axes of the potential)
+	(... those I have written so far, except for potential evaluating function itself implemented for rotating potential in an inertial frame of reference in which a bar lies aligned with x axis.)
 %	FUNCTIONS	
 		 
-		\subsection{Evaluate} % EVALUATE
-			Purpose: Evaluation of the potential as a function of (x,y,z) in the aligned coordinate frame \\
+		\subsection{Potential} % POTENTIAL ITSELF
+			Purpose: Evaluation of the bar potential as a function of cartesian coordinates in inertial frame. \\
    		\begin{equation}
-   		\Phi(\vec{x}) = \frac{-\mathrm{amp}\,b\,c}{4(n+1)}\,\Phi'
-   		\end{equation}	
-	   		\lstinputlisting[language=Python, firstline=125, lastline=126]{FerrersPotential.py}
-	
-		
-		\subsection{X Force} % X-FORCE
-			Purpose: Evaluation of the x component of the force as a function of (x,y,z) in the aligned coordinate frame \\
-   		\begin{equation}
-   		F_x = \frac{-\mathrm{amp}\,b\,c}{2}\,\Theta'_1
-   		\end{equation}  
-			\lstinputlisting[language=Python, firstline=263, lastline=264]{FerrersPotential.py}
-
-		\subsection{Y Force} % Y-FORCE
-			Purpose: Evaluation of the y component of the force as a function of (x,y,z) in the aligned coordinate frame \\
-   		\begin{equation}
-   		F_x = \frac{-\mathrm{amp}\,b\,c}{2}\,\Theta'_2
-   		\end{equation}	
-	   		\lstinputlisting[language=Python, firstline=272, lastline=273]{FerrersPotential.py}
-	
-		
-		\subsection{Z Force} % Z-FORCE
-			Purpose: Evaluation of the z component of the force as a function of (x,y,z) in the aligned coordinate frame \\
-   		\begin{equation}
-   		F_x = \frac{-\mathrm{amp}\,b\,c}{2}\,\Theta'_3
+   		\Phi(\vec{x}) = \frac{-\mathrm{amp}\,b\,c}{4(n+1)}\,\int_{\lambda}^{\infty} A^{n+1}(\tau)\,\mathrm{d} \tau
    		\end{equation}
-	   		\lstinputlisting[language=Python, firstline=281, lastline=282]{FerrersPotential.py}	
+   			where
+		\begin{equation}
+		A^{\nu}(\tau) = \frac{\left(1- \sum_{i=1}^{3} \frac{x_i^2}{\tau + a_i^2}\right)^{\nu}}{[(\tau + a^2)(\tau + a^2b^2)(\tau + a^2c^2)]^\frac{1}{2}}
+		\end{equation}
+   			is part of an integrand which is repeatedly used in following functions. Lower limit for the integral based on definition of the density distribution is given by relation:
+ 
+		\begin{equation}
+		\lambda = \begin{cases}
+		\text{unique positive solution of} \, m^2(\lambda)=1, &  \text{for}\ m \geq 1\\
+		\lambda = 0\,, & \text{for}\ m < 1
+		\end{cases} \\
+		\end{equation}
+		where $ m^2(\lambda) = \sum_{i=1}^{3} \frac{x_i^2}{\lambda + a_i^2} $.	
 	
-		
+	% they have the units in density \rho_0 wrong in paper one (probably because of the constants before the physical variables obtained somehow??) but still! [\rho] \neq s^{-2} !!
 		\subsection{Density} % DENSITY
 			Purpose: Evaluation of the density as a function of (x,y,z) in the aligned coordinate frame from cylindrical coordinates given as input\\
-		\begin{equation}
-		\rho(x,y,z) = \frac{\mathrm{amp}}{4\,\pi\,a^3}\,(1-(m/a)^2)^n,
-		\end{equation}
-		where
+		\begin{equation*}
+		\rho(m^2) = \begin{cases}
+		\frac{\mathrm{amp}}{4\,\pi\,a^3}\,(1-(m/a)^2)^n, & \text{for}\, m < a \\
+		0, & \text{for}\, m \geq a
+		\end{cases}
+		\end{equation*}
+			where
 		\begin{equation}
 		m^2 = x'^2 + \frac{y'^2}{b^2}+\frac{z'^2}{c^2}
 		\end{equation}
-			\lstinputlisting[language=Python, firstline=434, lastline=442]{FerrersPotential.py}
-
-
+		
+		\subsection{Force} % FORCE
+			Purpose: Evaluation of the x component of the force as a function of (x,y,z) in the aligned coordinate frame, which is used for evaluation of the force in cylindrical coordinates and then in orbit integration; does not take into account bar's rotation or initial position and therefore shall not be used directly.\\
+   		\begin{equation}
+   		F_i = \frac{-\mathrm{amp}\,b\,c}{2}\, \int_{\lambda}^{\infty} \frac{x_i}{a_i^2 + \tau} A^{n}(\tau)\,\mathrm{d} \tau
+   		\end{equation}  
+		where
+		\begin{equation*}
+			a_1 = a,~ a_2 = ab,~a_3 = ac
+		\end{equation*}
+		
+		
 		% SECOND DERIVATIVE
 		\subsection{General Second Derivative}
 			Purpose: General 2nd derivative of the potential as a function of (x,y,z) in the aligned coordinate frame \\
 		\begin{equation}
 		\Phi_{\mathrm{ij}} = -\frac{1}{4}\,b\,c \,\Phi'_{\mathrm{ij}}	
 		\end{equation}
-			
-			\lstinputlisting[language=Python, firstline=425, lastline=426]{FerrersPotential.py}
-	
-	
-		% INTEGRATION FOR POTENTIAL
-		\subsection{Integration for Potential}
-			Purpose: Evaluation of the z component of the force as a function of (x,y,z) in the aligned coordinate frame \\
-		\begin{equation}
-		\Phi' = \int_{0}^{\infty} A^{n+1}(\tau)\,\mathrm{d} \tau
-		\end{equation}
-			\lstinputlisting[language=Python, firstline=484, lastline=490]{FerrersPotential.py}
-	
-	
-		% INTEGRATION FOR FORCE
-		\subsection{Integration for Forces}
-			Purpose: Evaluation of the z component of the force as a function of (x,y,z) in the aligned coordinate frame \\
-		\begin{equation}
-		\Theta'_i = \int_0^{\infty} \frac{x_i}{a_i^2 + \tau} A^{n}(\tau)\,\mathrm{d} \tau,
-		\end{equation}
-		where
-		\begin{equation}
-		a_1 = a,~ a_2 = ab,~a_3 = ac
-		\end{equation}
-		
-			\lstinputlisting[language=Python, firstline=497, lastline=503]{FerrersPotential.py}
 	
 		
 		% INTEGRATION FOR SECOND DERIVATIVE	
 		\subsection{Integration for Second Derivative}
 			Purpose: Integral that gives the 2nd derivative of the potential in x,y,z \\
 			
-			\noindent The derivative is generally $ \pdv{\Phi}{x_i}{x_j} $; for $ i==j $ the integral to be evaluated is: 
+			\noindent The derivative is generally $ \pdv{\Phi}{x_i}{x_j} $; for $ i=j $ the integral to be evaluated is: 
 			
 		\begin{equation}
-		\Phi'_{\mathrm{ii}} = \int_{0}^{\infty} 
-		 \frac{4\,n\,x_i^2}{(\tau + a_i^2)^2} \frac{\left(1- \sum_{i=1}^{3} \frac{x_i^2}{\tau + a_i^2}\right)^{n-1}}{[(\tau + a^2)](\tau + a^2b^2)(\tau + a^2c^c)]^\frac{1}{2}}
-		- \frac{2}{\tau + a_i^2} \frac{\left(1- \sum_{i=1}^{3} \frac{x_i^2}{\tau + a_i^2}\right)^{n}}{[(\tau + a^2)](\tau + a^2b^2)(\tau + a^2c^c)]^\frac{1}{2}} \mathrm{d}\,\tau
+		\Phi'_{\mathrm{ii}} = \int_{\lambda}^{\infty} 
+		 \frac{4\,n\,x_i^2}{(\tau + a_i^2)^2} \,A^{\nu-1}(\tau)
+		- \frac{2}{\tau + a_i^2} A^{\nu}(\tau) \mathrm{d}\,\tau
 		\end{equation}
 		
 			\noindent In all other cases, the integral has this form:
 		\begin{equation}
-		\Phi'_{\mathrm{ij}} = \int_{0}^{\infty} 
-		\frac{4\,n\,x_i\,x_j}{(\tau + a_i^2)(\tau + a_j^2)} \frac{\left(1- \sum_{i=1}^{3} \frac{x_i^2}{\tau + a_i^2}\right)^{n-1}}{[(\tau + a^2)](\tau + a^2b^2)(\tau + a^2c^c)]^\frac{1}{2}} \mathrm{d}\tau
+		\Phi'_{\mathrm{ij}} = \int_{\lambda}^{\infty} 
+		\frac{4\,n\,x_i\,x_j}{(\tau + a_i^2)(\tau + a_j^2)} A^{\nu-1}(\tau) \mathrm{d}\tau
 		\end{equation}	
-			
-			\lstinputlisting[language=Python, firstline=511, lastline=522]{FerrersPotential.py}
+
+	%MILKY WAY BAR POTENTIAL
+	\section{Milky Way Bar Potential}
 		
+		Values of parameters used for further work are set as the final state values in \cite{MachadoManos:2016}, that is:
+		
+		\begin{equation*}
+			a = 8\,kpc,~
+			b = 0.35,~
+			c = 0.2375,~
+			\mathrm{amp} = 3.3 \times 10^{10}\, M_{\odot},~
+			\Omega_b = 10\,km/s/kpc.
+		\end{equation*}
 	
-		% PART OF INTEGRAND USED IN ALL FUNCTIONS
-		\subsection{Part of Integrand Used in All Functions}
-			Purpose: Returns part of an integrand which is used in other functions so the code was more concise. \\
-		\begin{equation}
-		A^{\nu}(\tau) = \frac{\left(1- \sum_{i=1}^{3} \frac{x_i^2}{\tau + a_i^2}\right)^{\nu}}{[(\tau + a^2)(\tau + a^2b^2)(\tau + a^2c^2)]^\frac{1}{2}}
-		\end{equation}
-			\lstinputlisting[language=Python, firstline=530, lastline=531]{FerrersPotential.py}
 	
+
+	
+		\nocite{*} % Insert publications even if they are not cited in the poster
+		
+		\small{\bibliographystyle{unsrt}
+			\bibliography{sample}\vspace{0.01in}}
+		
 	
 	
 \end{document}
